[gd_scene load_steps=4 format=3 uid="uid://stkct102uxv4"]

[ext_resource type="Script" uid="uid://ch4ymjogv4i6r" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="GDScript" id="GDScript_v4t28"]
script/source = "extends ButtonGroup
"

[sub_resource type="ButtonGroup" id="ButtonGroup_qwnig"]
allow_unpress = true
script = SubResource("GDScript_v4t28")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TitleCard" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -220.5
offset_right = 313.0
offset_bottom = -83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "BULLET HELL"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 116.0
offset_right = 69.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Dash" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_qwnig")
text = "dash"
alignment = 1

[node name="Shield" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_qwnig")
text = "shield"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -84.5
offset_right = 82.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start Game" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HiScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 271.0
offset_top = -9.0
offset_right = 311.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="toggled" from="HBoxContainer/Dash" to="." method="_on_dash_toggled"]
[connection signal="toggled" from="HBoxContainer/Shield" to="." method="_on_shield_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
